--- a/vim/install
+++ b/vim/install
@@ -10,6 +10,7 @@ mkdir -p /home/antoine/.vim/tmp/
 
 ln -s -f /home/antoine/.dotfiles/vim/vimrc /home/antoine/.vimrc
 ln -s -f /home/antoine/.dotfiles/vim/colors /home/antoine/.vim/colors
+ln -s -f /home/antoine/.dotfiles/vim/ftplugin /home/antoine/.vim/ftplugin
 ln -s -f /home/antoine/.dotfiles/vim/UltiSnips /home/antoine/.vim/UltiSnips
 
 chown -R antoine /home/antoine/.vim/
