--- a/ctags/install
+++ b/ctags/install
@@ -1,5 +1,5 @@
 #!/usr/bin/sh
 
-pacman -S --noconfirm ctags
+yay -S --noconfirm ctags
 
 ln -s -f /home/antoine/.dotfiles/ctags/ctags.d /home/antoine/.ctags.d
