--- a/docker/install
+++ b/docker/install
@@ -1,5 +1,5 @@
 #!/usr/bin/sh
 
-pacman -S --noconfirm docker docker-compose
+yay -S --noconfirm docker docker-compose
 
 sudo usermod -a -G docker $USER
