--- a/tmux/install
+++ b/tmux/install
@@ -1,6 +1,6 @@
 #!/usr/bin/sh
 
-pacman -S --noconfirm tmux
+yay -S --noconfirm tmux
 
 ln -s -f /home/antoine/.dotfiles/tmux/tmux.conf /home/antoine/.tmux.conf
 
